<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/favorites"
            android:title="收藏记录" />
        <item
            android:id="@+id/nav_password"
            android:icon="@drawable/password"
            android:title="@string/menu_password" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/log"
            android:title="@string/menu_logout" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/menu_about" />

    </group>
</menu>